--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,17 @@ Thumbs.db
 
 # Linux
 *.log
+
+# Web related
+lib/generated_plugin_registrant.dart
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
